<resources>
    <string name="app_name">Corki</string>
    <string name="title_search">Search</string>
    <string name="title_create">Create</string>
    <string name="title_my_offers">My offers</string>
    <string name="title_profile">Profile</string>
    <string name="title">Title</string>
    <string name="secondary_text">temp_secondary</string>
    <string name="supporting_text">temp_supporting</string>
    <string name="action_1">Details</string>
    <string name="subject">Subject</string>
    <string name="level">Level</string>
    <string name="city">City</string>
    <string name="max_price">Max price</string>
    <string name="duration">Duration</string>
    <string name="title_details">Details</string>
    <string name="edit">Edit</string>
    <string name="register">Register</string>
    <string name="create_notice">Create new offer</string>
    <string name="category_title">Title:</string>
    <string name="category_subject">Subject:</string>
    <string name="category_city">City:</string>
    <string name="category_level">Level:</string>
    <string name="category_price">Price:</string>
    <string name="category_date">Date:</string>
    <string name="category_duration">Duration:</string>
    <string name="category_owner">Owner:</string>
    <string name="create_title">Create your notice!</string>
    <string name="profile_name">Name:</string>
    <string name="name">Name</string>
    <string name="profile_surname">Surname:</string>
    <string name="surname">Surname</string>
    <string name="profile_email">Email:</string>
    <string name="email">Email</string>
    <string name="profile_phone">Phone:</string>
    <string name="phone">Phone</string>
    <string name="profile_birthday">Birthday:</string>
    <string name="birthday">Birthday</string>
    <string name="hint_number">123456789</string>
    <string name="log_out">log out</string>

    <string-array name="subjects">
        <item />
        <item> Math </item>
        <item> Physics </item>
        <item> Chemistry </item>
        <item> Geography </item>
        <item> Biology </item>
        <item> History </item>
        <item> Computer Science </item>
        <item> Art </item>
        <item> Polish </item>
        <item> Japanese </item>
        <item> Spanish </item>
    </string-array>

    <string-array name="level">
        <item />
        <item> Primary School </item>
        <item> Middle School </item>
        <item> High School </item>
        <item> University </item>
    </string-array>

    <string-array name="city">
        <item />
        <item> Wrocław </item>
        <item> Poznań </item>
        <item> Warszawa </item>
        <item> Kraków </item>
        <item> Łódź </item>
        <item> Gdańsk </item>
        <item> Szczecin </item>
        <item> Bydgoszcz </item>
        <item> Lublin </item>
        <item> Białystok </item>
        <item> Katowice </item>
        <item> Gdynia </item>
        <item> Częstochowa </item>
    </string-array>

    <string-array name="duration">
        <item> 30 </item>
        <item> 45 </item>
        <item> 60 </item>
        <item> 120 </item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register_question">Don\'t have an account yet?</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in">Log in</string>
    <string name="register_password">Password</string>
    <string name="password">Password:</string>
    <string name="license_agreement">I accept the license and terms</string>
    <string name="invalid_time">Wrong time format</string>
    <string name="invalid_title">Wrong title</string>
    <string name="invalid_subject">Wrong subject</string>
    <string name="invalid_city">Wrong city</string>
    <string name="invalid_price">Wrong price</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>