<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_new_account"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:columnCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/profile_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/detail_category_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_register_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:minWidth="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="60dp"
                    android:layout_row="0"
                    android:layout_column="1" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_register_edit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--                name-->

                <TextView
                    android:id="@+id/surnameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/profile_surname"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/detail_category_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/surname_register_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:minWidth="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="60dp"
                    android:layout_row="1"
                    android:layout_column="1" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surname_register_edit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--                surname-->

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/profile_email"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/detail_category_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_register_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:minWidth="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="60dp"
                    android:layout_row="2"
                    android:layout_column="1" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_register_edit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--                email-->

                <TextView
                    android:id="@+id/passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/detail_category_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_register_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password"
                    android:minWidth="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="60dp"
                    android:layout_row="3"
                    android:layout_column="1" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_register_edit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--                password-->

                <TextView
                    android:id="@+id/birthdayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:text="@string/profile_birthday"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/detail_category_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthday_register_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:minWidth="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="60dp"
                    android:layout_row="4"
                    android:layout_column="1" >

                    <AutoCompleteTextView
                        android:id="@+id/birthday_register_edit1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="false"
                        android:gravity="start|center"
                        android:inputType="none"
                        android:focusableInTouchMode="false"
                        android:paddingHorizontal="5dp">

                    </AutoCompleteTextView>
                </com.google.android.material.textfield.TextInputLayout>
                <!--                birthday-->

            </GridLayout>

            <RadioButton
                android:id="@+id/radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/license_agreement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grid_layout" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>